# os

./: Cargo.toml  build.rs
kernel/: Cargo.toml
kernel/src/: framebuffer.rs  gdt.rs  interrupts.rs  logger.rs  main.rs  vga.rs
kernel/src/logger/: vga_text.rs
src/: main.rs
