[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = "0.11.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
noto-sans-mono-bitmap = "0.2.0"
spin = "0.9.4"
volatile = { version = "0.4.5", features = ["unstable"] }
x86_64 = "0.14.10"
